<resources>
    <string name="app_name">Youtix V2</string>
    <string name="videos">Videos</string>
    <string name="playlists">Playlists</string>
    <string name="menu">Menu</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="empty">It\'s a bit empty here</string>
    <string name="history">History</string>
    <string name="watch_later">Watch Later List</string>
    <string name="share_video">Share this video</string>
    <string name="no_internet">You don\'t have Internet connection</string>
    <string name="try_again">try again</string>
    <string name="get_started_title">Welcome to Youtix V2</string>
    <string name="get_started_text">Hi there, welcome to my youtube channel and android application, I\'m a passionate developer and content creator., I hope you like my content. Hi there, welcome to my youtube channel and android application, I\'m a passionate developer and content creator., I hope you like my content.</string>
    <string name="get_started">Get started</string>
    <string name="visit_channel">Visit Channel</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Please confirm that you want to delete these items</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="identify_yourself">Please identify yourself so you can be a part of our community. It only takes a few seconds</string>
    <string name="name">Name</string>
    <string name="change_name">Update name</string>
    <string name="done">Done!</string>
</resources>